fix(dark): make hyperlink preview readable
Previously the hyperlink preview text wouldn't change color in dark mode
which led to black text on a dark background. If we make it dependent on
our CSS variables then we will be able to read it in any theme

--- a/browser/css/lool.css
+++ b/browser/css/lool.css
@@ -1309,6 +1309,7 @@ body {
 }
 
 #hyperlink-pop-up-preview p {
+	color: var(--color-main-text);
 	text-overflow: ellipsis;
 	overflow: hidden;
 	font-size: 14px;
